made images accessible

--- a/index.html
+++ b/index.html
@@ -49,8 +49,8 @@
   <article class="media" id="media-container">
     <figure class="media-left">
       <p class="image is-64x64">
-        <a href="C:\Users\Jordan\projects\ti4-senpai\pages\factions\arborec.html">
-        <img src="C:\Users\Jordan\projects\ti4-senpai\assets\Arborec.png">
+        <a href="pages\factions\arborec.html">
+        <img src="assets\Arborec.png">
       </p>
     </figure>
     <div class="media-content">
